--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,8 +19,8 @@ h1{
 
 .form-signin {
   width: 100%;
-  max-width: 330px;
-  padding: 15px;
+  max-width: 400px;
+  padding: 50px 50px;
   margin: auto;
 }
 .form-signin .checkbox {
