--- a/views/tax.ejs
+++ b/views/tax.ejs
@@ -15,18 +15,148 @@
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" 
     crossorigin="anonymous">
 
-    <title>Tax Results: </title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <title>Supply Chain Results: </title>
 </head>
-<body>
-<div class="container" style="padding-top: 3%">
-    <header class="bg-primary p-4 text-white text-center">
-     
-    </header>
-    <h1>Ok</h1>
-    <br>
-    <p class="mt-5 mb-3 text-muted text-center">&copy; <script>document.write(new Date().getFullYear())</script>
-    Copyright Aaron Tan</p>
-</div>
+<!-- Not functional Supply Chain Website. Placeholder values of what it should look like. -->
+<body style="background-color: #fcfcfc">
+    <div class="container" style="padding-top: 3%">
+        <header class="bg-primary p-4 text-white text-center">
+            <h1>Supply Chain results: </h1>
+            <h4>Cheapest Route: A (Total Net Profit)</h4>
+            <h4>Expensive Route: B (Total Net Profit)</h4>
+        </header>
+        <br>
+        <div style="text-align: center">
+            <h3>Selection details: </h3>
+            <h5>Number of tons: <%= ton %></h5>
+            <h5>Farmer: <%= farmer %> (Sell Price: $<%= sell * ton %>)</h5>
+            <h5>Merchant: <%= merchant %> (Buy Price: $<%= buy * ton %>)</h5>
+        </div>
+        <hr>
+        <div style="text-align: center">
+            <h3>Overview of routes: </h3>
+            <p style="text-decoration-line: underline"><b>Route A:</b> <%= farmer %> -> Fresh Millers -> We Roast Beans -> <%= merchant %></p>
+            <p style="text-decoration-line: underline"><b>Route B:</b> <%= farmer %> -> Mount Millers -> We Roast Beans -> <%= merchant %>
+            <p style="text-decoration-line: underline" ><b>Route C:</b> <%= farmer %> -> Easy Millings -> We Roast Beans -> <%= merchant %></p>
+            <p style="text-decoration-line: underline" ><b>Route D:</b> <%= farmer %> -> Fresh Millers -> Burnt Beans -> <%= merchant %></p>
+            <p style="text-decoration-line: underline" ><b>Route E:</b> <%= farmer %> -> Mount Millers -> Burnt Beans -> <%= merchant %></p>
+            <p style="text-decoration-line: underline" ><b>Route F:</b> <%= farmer %> -> Easy Millings -> Burnt Beans -> <%= merchant %></p>
+        </div>
+        <hr>
+        <table class="table table-striped table-bordered table-hover text-center">
+            <thead>
+                <tr>
+                    <th scope="col">Route</th>
+                    <!-- <th scope="col">Party Name</th> -->
+                  
+                    <th scope="col">Miller</th>
+                    <th scope="col">Roaster</th>
+       
+                    <th>Total Tax: </th>
+                    <th>Total Net Profit: </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td scope="col" rowspan="">A</td>
+                    
+                    <td scope="col">
+                       Fresh Millers <button id="btn" style="border-radius: 50%;"><i class="fas fa-info-circle"></i></button>
+                    </td>
+                    <td scope="col">
+                       We Roast Beans <button id="btn2" style="border-radius: 50%;"><i class="fas fa-info-circle"></i></button>
+                    </td>
+                
+                    <td scope="col">Tax calculation here</td>
+                    <td scope="col">Total Net Profit here</td>
+                </tr>
+                <tr>
+                    <td scope="col">B</td>
+                    <td scope="col">
+                        Mount Millers <button style="border-radius: 50%;"><i class="fas fa-info-circle"></i></button>
+                    </td>
+               
+                    <td scope="col">
+                        We Roast Beans <button style="border-radius: 50%;"><i class="fas fa-info-circle"></i></button>
+                    </td>
+                  
+                    <td scope="col">Tax calculation here</td>
+                    <td scope="col">Total Net Profit here</td>
+             
+                </tr>
+                <tr>
+                    <td scope="col">C</td>
+                    <td scope="col">
+                        Easy Millings <button style="border-radius: 50%;"><i class="fas fa-info-circle"></i></button>
+                    </td>
+                  
+                    <td scope="col">
+                        We Roast Beans <button style="border-radius: 50%;"><i class="fas fa-info-circle"></i></button>
+                    </td>
+                  
+                    <td scope="col">Tax calculation here</td>
+                    <td scope="col">Total Net Profit here</td>
+                  
+                </tr>
+                <tr>
+                    <td scope="col">D</td>
+                    <td scope="col">
+                        Fresh Millers <button style="border-radius: 50%;"><i class="fas fa-info-circle"></i></button>
+                    </td>
+                    
+                    <td scope="col">
+                        Burnt Beans <button style="border-radius: 50%;"><i class="fas fa-info-circle"></i></button>
+                    </td>
+                  
+                    <td scope="col">Tax calculation here</td>
+                    <td scope="col">Total Net Profit here</td>
+              
+                </tr>
+                <tr>
+                    <td scope="col">E</td>
+                    <td scope="col">
+                        Mount Millers <button style="border-radius: 50%;"><i class="fas fa-info-circle"></i></button>
+                    </td>
+                    
+                    <td scope="col">
+                        Burnt Beans <button style="border-radius: 50%;"><i class="fas fa-info-circle"></i></button>
+                    </td>
+              
+                    <td scope="col">Tax calculation here</td>
+                    <td scope="col">Total Net Profit here</td>
+                 
+                </tr>
+                <tr>
+                    <td scope="col">F</td>
+                    <td scope="col">
+                        Easy Millings <button style="border-radius: 50%;"><i class="fas fa-info-circle"></i></button>
+                    </td>
+                   
+                    <td scope="col">
+                        Burnt Beans <button style="border-radius: 50%;"><i class="fas fa-info-circle"></i></button>
+                    </td>
+               
+                    <td scope="col">Tax calculation here</td>
+                    <td scope="col">Total Net Profit here</td>
+                  
+                </tr>
+            </tbody>
+        </table>
+        <br>
+        <p class="mt-5 mb-3 text-muted text-center">&copy; <script>document.write(new Date().getFullYear())</script>
+        Copyright Aaron Tan</p>
+    </div>
 
+    <script type="text/javascript">
+    $("#btn").click(() => {
+        alert("Fresh Miller Details: \n\nBuy Price: $500 \nSell Price: $700 \nCountry: Kenya\n\n($Profit, $Tax) from Farmer: (Amazing Beans, Kenya)");
+    });
+
+    $("#btn2").click(() => {
+        alert("We Roast Beans Details: \n\nBuy Price: $800 \nSell Price: $1000 \nCountry:" + 
+        " Kenya\n\n($Profit, $Tax) from Miller (Amazing Beans, Kenya)\n($Profit, $Tax) from Merchant (Gold Coffee Merchants, Mexico)");
+    });
+    </script>
 </body>
 </html>
